syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__genetic_params__tests__it_matches_const_param.snap
---
source: syn-state-machine/src/common_tokens/genetic_params.rs
expression: "crate::parse::<ConstParam<Infallible>>(::quote::quote! { const HELLO : i8 })"
---
Ok(
    (
        ConstParam {
            id: Ident(
                HELLO,
            ),
            ty: NoBounds(
                TypePath(
                    TypePath {
                        leading: false,
                        segments: [
                            Simple {
                                id: Id(
                                    Ident(
                                        i8,
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
            content: None,
        },
        0,
    ),
)
