syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__genetic_params__tests__it_matches_const_param_bounded.snap
---
source: syn-state-machine/src/common_tokens/genetic_params.rs
expression: "crate::parse::<ConstParam<Ident>>(::quote::quote! { const HELLO : i8 = 10 })"
---
Ok(
    (
        ConstParam {
            id: Ident(
                HELLO,
            ),
            ty: Ident(
                i8,
            ),
            content: Some(
                Punct {
                    char: '=',
                    spacing: Alone,
                },
            ),
        },
        0,
    ),
)
