syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__genetic_params__tests__it_matches_const_param_with_bound.snap
---
source: syn-state-machine/src/common_tokens/genetic_params.rs
expression: "crate::parse::<ConstParam<Infallible>>(::quote::quote! {\n            const HELLO : i8 = 10\n        })"
---
Ok(
    (
        ConstParam {
            id: Ident(
                HELLO,
            ),
            ty: NoBounds(
                TypePath(
                    TypePath {
                        leading: false,
                        segments: [
                            Simple {
                                id: Id(
                                    Ident(
                                        i8,
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
            content: Some(
                Punct {
                    char: '=',
                    spacing: Alone,
                },
            ),
        },
        0,
    ),
)
