syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__genetic_params__tests__it_matches_type_param.snap
---
source: syn-state-machine/src/common_tokens/genetic_params.rs
expression: "crate::parse::<TypeParam>(::quote::quote! { Hello })"
---
Ok(
    (
        TypeParam {
            id: Ident(
                Hello,
            ),
            bounds: None,
            ty: None,
        },
        0,
    ),
)
