syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__genetic_params__tests__it_matches_type_param_with_bound.snap
---
source: syn-state-machine/src/common_tokens/genetic_params.rs
expression: "crate::parse::<TypeParam>(::quote::quote! { Hello : std :: fmt :: Debug })"
---
Ok(
    (
        TypeParam {
            id: Ident(
                Hello,
            ),
            bounds: Some(
                TypeParamBounds(
                    [
                        TraitBound(
                            TraitBound {
                                q: false,
                                for: None,
                                ty: TypePath {
                                    leading: false,
                                    segments: [
                                        Simple {
                                            id: Id(
                                                Ident(
                                                    std,
                                                ),
                                            ),
                                        },
                                        Simple {
                                            id: Id(
                                                Ident(
                                                    fmt,
                                                ),
                                            ),
                                        },
                                        Simple {
                                            id: Id(
                                                Ident(
                                                    Debug,
                                                ),
                                            ),
                                        },
                                    ],
                                },
                            },
                        ),
                    ],
                ),
            ),
            ty: None,
        },
        0,
    ),
)
